tests/netperf/isilon_40G/udp_050/outgoing.txt
zephram-1# netserver -D
Starting netserver with host 'IN(6)ADDR_ANY' port '12865' and family AF_UNSPEC
^C
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-1# bash cpu_usage.sh netserver
^C
11.6 12.2 14.1 14.6 16.7 16.7 18.8 18.7 20.4 20.0 22.2 21.8 24.0 23.5 25.4 24.7 26.1 25.4 27.1 26.3 28.0 27.3 28.8 28.2 30.2 29.0 31.0 29.7 31.6 30.5 32.3 31.1 32.5 31.3 33.0 34.6 32.9 35.0 33.7 35.5 33.9 35.5 34.0 35.9 34.1 36.1 34.5 36.5 35.0 36.9 35.4
average: 27.9275
zephram-1# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# ./ipfwd 1 0.5
[ipfwd] starting
current:  11.566%, error:  11.6%, probability:  0.500%
current:  11.639%, error:  0.1%, probability:  0.500%
current:  11.707%, error:  0.1%, probability:  0.500%
current:  11.768%, error:  0.1%, probability:  0.500%
current:  14.825%, error:  3.1%, probability:  0.500%
current:  15.637%, error:  0.8%, probability:  0.500%
current:  16.382%, error:  0.7%, probability:  0.500%
current:  16.071%, error:  0.3%, probability:  0.500%
^C
zephram-2# ipfw show | wc
      52     470    3265
zephram-2# 









────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# netperf -l 30 -H 192.168.166.32 -t UDP_STREAM
MIGRATED UDP STREAM TEST from 0.0.0.0 (0.0.0.0) port 0 AF_INET to 192.168.166.32 (192.168.166.32) port 0 AF_INET
Socket  Message  Elapsed      Messages                
Size    Size     Time         Okay Errors   Throughput
bytes   bytes    secs            #      #   10^6bits/sec

 16384   16384   30.01     2182447      0    9532.19
512000           30.01     2182447           9532.19

zephram-2# 










────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
zephram-2# bash cpu_usage.sh netperf
^C
11.9 17.1 19.9 25.1 27.3 32.3 33.8 38.7 39.8 44.7 45.8 50.9 50.7 55.9 55.4 60.7 59.7 64.5 62.9 68.0 66.4 71.3 69.4 74.3 72.2 77.0 74.4 79.3 76.8 82.1 79.3 84.4 81.2 86.1 82.9 88.0 84.6 89.5 86.1 90.9 87.4 92.3 88.8 93.8 89.7 94.7 90.4 95.6 91.5 96.3 92.4 97.3 93.0 98.1 93.8
average: 70.1164
zephram-2# 
